[Spring 경로 조회 - 1단계] 렉스(오성원) 미션 제출합니다. (#210)
* feat: clone previous project

* docs(README): 요구사항 정리

* feat(PathService): 운임 요금 계산 기능 구현 및 테스트 작성

* feat(SectionDao): 모든 구간 정보를 가져오는 로직 작성

* feat(StationDao): 조건에 해당하는 역 정보를 순서대성 가져오는 로직 작성

* feat(PathService): 경로 조회 기능 및 테스트 작성

* refactor(LineSections): 이름을 `Sections` 에서 `LineSections` 으로 변경

* refactor(PathService): 비즈니스 로직(PathService) 을 도메인 로직으로 (FareCalculator, PathFinder) 으로 분리

* refactor(PathFindResponse): 이름을 `PathFindResult`에서 `PathFindResponse`로 변경

* feat(PathController): 경로 조회 API 및 테스트 작성

* feat(PathService): 존재하지 않는 역으로 경로조회 요청시 예외처리 추가

* refactor(LineSections): 상/하행 종점 구간을 구하는 메서드 생성

Co-authored-by: progress0407 <progress0407@gmail.com>