@@ -1,135 +1,127 @@
 package wooteco.subway.acceptance;
 
-import io.restassured.RestAssured;
 import io.restassured.response.ExtractableResponse;
 import io.restassured.response.Response;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
+import wooteco.subway.dto.LineRequest;
 import wooteco.subway.dto.StationRequest;
 import wooteco.subway.dto.StationResponse;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.assertAll;
 
-@DisplayName("지하철역 관련 기능")
+@SuppressWarnings("NonAsciiCharacters")
 public class StationAcceptanceTest extends AcceptanceTest {
-    private static final String 강남역 = "강남역";
-    private static final String 역삼역 = "역삼역";
+
+    private final String basicPath = "/stations";
 
     @DisplayName("지하철역을 생성한다.")
     @Test
     void createStation() {
+        // given
+        StationRequest request = new StationRequest("강남역");
+
         // when
-        ExtractableResponse<Response> response = 지하철역_생성_요청(강남역);
+        ExtractableResponse<Response> response =
+                RestAssuredConvenienceMethod.postRequest(request, basicPath);
 
         // then
-        지하철역_생성됨(response);
+        Long ResponseStationId = response.jsonPath().getObject(".", StationResponse.class).getId();
+        assertAll(
+                () -> assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value()),
+                () -> assertThat(response.header("Location")).isEqualTo("/stations/" + ResponseStationId)
+        );
     }
 
-    @DisplayName("기존에 존재하는 지하철역 이름으로 지하철역을 생성한다.")
+    @DisplayName("비어있는 값으로 이름을 생성하면 400번 코드를 반환한다.")
     @Test
-    void createStationWithDuplicateName() {
-        //given
-        지하철역_등록되어_있음(강남역);
+    void createStationWithInvalidDataSize() {
+        // given
+        StationRequest request = new StationRequest("");
 
         // when
-        ExtractableResponse<Response> response = 지하철역_생성_요청(강남역);
+        ExtractableResponse<Response> response =
+                RestAssuredConvenienceMethod.postRequest(request, basicPath);
 
         // then
-        지하철역_생성_실패됨(response);
+        assertThat(response.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value());
+    }
+
+    @DisplayName("기존에 존재하는 지하철역 이름으로 지하철역을 생성하면 400번 코드를 반환한다.")
+    @Test
+    void createStationWithDuplicateName() {
+        // given
+        RestAssuredConvenienceMethod.postRequest(new StationRequest("선릉역"), basicPath);
+        StationRequest request = new StationRequest("선릉역");
+
+        // when
+        ExtractableResponse<Response> response =
+                RestAssuredConvenienceMethod.postRequest(request, basicPath);
+
+        // then
+        assertThat(response.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value());
     }
 
     @DisplayName("지하철역을 조회한다.")
     @Test
     void getStations() {
         // given
-        StationResponse stationResponse1 = 지하철역_등록되어_있음(강남역);
-        StationResponse stationResponse2 = 지하철역_등록되어_있음(역삼역);
+        Long 선릉역_id = RestAssuredConvenienceMethod.postLineAndGetId(new StationRequest("선릉역"), basicPath);
+        Long 선정릉역_id = RestAssuredConvenienceMethod.postLineAndGetId(new StationRequest("선정릉역"), basicPath);
 
         // when
-        ExtractableResponse<Response> response = 지하철역_목록_조회_요청();
+        ExtractableResponse<Response> response = RestAssuredConvenienceMethod.getRequest(basicPath);
 
         // then
-        지하철역_목록_응답됨(response);
-        지하철역_목록_포함됨(response, Arrays.asList(stationResponse1, stationResponse2));
+        List<Long> resultLineIds = response.jsonPath().getList(".", StationResponse.class).stream()
+                .map(StationResponse::getId)
+                .collect(Collectors.toList());
+        assertThat(resultLineIds).containsAll(List.of(선릉역_id, 선정릉역_id));
     }
 
     @DisplayName("지하철역을 제거한다.")
     @Test
     void deleteStation() {
         // given
-        StationResponse stationResponse = 지하철역_등록되어_있음(강남역);
+        Long 선릉역_id = RestAssuredConvenienceMethod.postStationAndGetId(new StationRequest("선릉역"), basicPath);
 
         // when
-        ExtractableResponse<Response> response = 지하철역_제거_요청(stationResponse);
+        ExtractableResponse<Response> response =
+                RestAssuredConvenienceMethod.deleteRequest("/stations/" + 선릉역_id);
 
-        // then
-        지하철역_삭제됨(response);
-    }
-
-    public static StationResponse 지하철역_등록되어_있음(String name) {
-        return 지하철역_생성_요청(name).as(StationResponse.class);
-    }
-
-    public static ExtractableResponse<Response> 지하철역_생성_요청(String name) {
-        StationRequest stationRequest = new StationRequest(name);
-
-        return RestAssured
-                .given().log().all()
-                .body(stationRequest)
-                .contentType(MediaType.APPLICATION_JSON_VALUE)
-                .when().post("/stations")
-                .then().log().all()
-                .extract();
-    }
-
-    public static ExtractableResponse<Response> 지하철역_목록_조회_요청() {
-        return RestAssured
-                .given().log().all()
-                .when().get("/stations")
-                .then().log().all()
-                .extract();
-    }
-
-    public static ExtractableResponse<Response> 지하철역_제거_요청(StationResponse stationResponse) {
-        return RestAssured
-                .given().log().all()
-                .when().delete("/stations/" + stationResponse.getId())
-                .then().log().all()
-                .extract();
-    }
-
-    public static void 지하철역_생성됨(ExtractableResponse response) {
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.CREATED.value());
-        assertThat(response.header("Location")).isNotBlank();
-    }
-
-    public static void 지하철역_생성_실패됨(ExtractableResponse<Response> response) {
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value());
-    }
-
-    public static void 지하철역_목록_응답됨(ExtractableResponse<Response> response) {
-        assertThat(response.statusCode()).isEqualTo(HttpStatus.OK.value());
-    }
-
-    public static void 지하철역_삭제됨(ExtractableResponse<Response> response) {
         assertThat(response.statusCode()).isEqualTo(HttpStatus.NO_CONTENT.value());
     }
 
-    public static void 지하철역_목록_포함됨(ExtractableResponse<Response> response, List<StationResponse> createdResponses) {
-        List<Long> expectedLineIds = createdResponses.stream()
-                .map(it -> it.getId())
-                .collect(Collectors.toList());
+    @DisplayName("존재하지 않는 지하철역을 삭제하려하면 400번 코드를 반환한다.")
+    @Test
+    void deleteStationWithNotExistData() {
+        // when
+        ExtractableResponse<Response> response =
+                RestAssuredConvenienceMethod.deleteRequest("/stations/" + 100L);
 
-        List<Long> resultLineIds = response.jsonPath().getList(".", StationResponse.class).stream()
-                .map(StationResponse::getId)
-                .collect(Collectors.toList());
+        // then
+        assertThat(response.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value());
+    }
 
-        assertThat(resultLineIds).containsAll(expectedLineIds);
+    @DisplayName("노선에 속해있는 지하철역을 삭제하려하면 400번 코드를 반환한다.")
+    @Test
+    void deleteStationWithStationInLine() {
+        // given
+        Long 선릉역_id = RestAssuredConvenienceMethod.postStationAndGetId(new StationRequest("선릉역"), "/stations");
+        Long 선정릉역_id = RestAssuredConvenienceMethod.postStationAndGetId(new StationRequest("선정릉역"), "/stations");
+        Long 분당선_id = RestAssuredConvenienceMethod.postLineAndGetId(
+                new LineRequest("분당선", "yellow", 선릉역_id, 선정릉역_id, 10), "/lines");
+
+        // when
+        ExtractableResponse<Response> response =
+                RestAssuredConvenienceMethod.deleteRequest("/stations/" + 선릉역_id);
+
+        // then
+        assertThat(response.statusCode()).isEqualTo(HttpStatus.BAD_REQUEST.value());
     }
 }
